# task_manager

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/: config.py  main.py
src/application/schemas/: task.py
src/application/services/: task_service.py
src/domain/enums/: task_status.py
src/domain/models/: tasks.py
src/domain/repositories/: tasks.py
src/infrastructure/database/: dependencies.py
src/infrastructure/persistence/sqlalchemy/: models.py  task_repository.py
src/migrations/: env.py
src/migrations/versions/: 04a14c3626d2_initial_migration.py
src/presentation/: dependencies.py
src/presentation/routers/: tasks.py
tests/: conftest.py  test_api.py  test_task_service.py
